# nonbinary_c

./: .gitignore  Cargo.toml  Makefile  cbindgen.toml
c_test/: CMakeLists.txt  call_rust.c
src/: lib.rs  panic.rs
