[package]
name = "nonbinary_c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]
name = "nonbinary"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[features]
dumb = []

[dependencies]
nonbinary = {path = "../nonbinary"}
